# homebox-mcp

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  PLAN.md  README.md  REVIEW.md  annotate_location_photos.py  heic2jpg.py  homebox_mcp.py  pyproject.toml  server.json  server.py
.github/workflows/: ci.yml  publish.yml
docs/: DECISIONS.md  PLAN.md
tests/: conftest.py  test_delete.py  test_locations.py  test_maintenance.py  test_mcp_registration.py  test_pure.py  test_reporting.py  test_resolve.py  test_search.py  test_version_and_errors.py
