[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "homebox-mcp"
dynamic = ["version"]
description = "MCP server for Homebox (>= 0.26): inventory Q&A, intake, attachments, labels"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
authors = [{ name = "Dan Gahagan" }]
keywords = ["mcp", "model-context-protocol", "homebox", "inventory", "claude"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Home Automation",
]
dependencies = [
    "mcp>=1.10",
    "httpx>=0.27",
    "pillow>=10",
    "pillow-heif>=0.16",
]

[project.scripts]
homebox-mcp = "homebox_mcp:main"

[project.urls]
Homepage = "https://github.com/dgahagan/homebox-mcp"
Changelog = "https://github.com/dgahagan/homebox-mcp/blob/main/CHANGELOG.md"
Issues = "https://github.com/dgahagan/homebox-mcp/issues"

[tool.hatch.version]
path = "homebox_mcp.py"

[tool.hatch.build.targets.wheel]
only-include = ["homebox_mcp.py"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
